add some new libs

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         }
     ],
     "require": {
-        "silex/silex": "~1.2"
+        "silex/silex": "~1.2",
+        "symfony/yaml": "3.0.*@dev",
+        "twig/twig": "2.0.*@dev"
     },
     "autoload": {
         "psr-0": {"Valiknet": "src/"}
