--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,3 +1,6 @@
+php_flag  display_errors        on
+php_value error_reporting       2039
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews
