--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
     "require": {
         "silex/silex": "~1.2",
         "symfony/yaml": "3.0.*@dev",
-        "twig/twig": "2.0.*@dev",
-        "symfony/form": "^2.6"
+        "twig/twig": "~1.13.1",
+        "symfony/form": "^2.6",
+        "symfony/twig-bridge": "^2.6",
+        "symfony/security": "~2.3"
     },
     "autoload": {
         "psr-0": {"Valiknet": "src/"}
